<project xmlns="http://maven.apache.org/POM/4.0.0">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.lhogie</groupId>
	<artifactId>byransha</artifactId>
	<version>0.0.3-SNAPSHOT</version>
	<properties>
		<maven.compiler.target>25</maven.compiler.target>
		<maven.compiler.source>25</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>io.github.mkpaz</groupId>
			<artifactId>atlantafx-base</artifactId>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.5.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.21.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>27-ea+6</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>27-ea+6</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>io.github.classgraph</groupId>
			<artifactId>classgraph</artifactId>
			<version>4.8.165</version>
		</dependency>
		<dependency>
			<groupId>de.mkammerer</groupId>
			<artifactId>argon2-jvm</artifactId>
			<version>2.11</version>
		</dependency>
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf-extras</artifactId>
			<version>3.0</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.plantuml</groupId>
			<artifactId>plantuml</artifactId>
			<version>1.2024.3</version>
		</dependency>
		<dependency>
			<groupId>tools.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>3.0.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
			<version>2.13.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.13.2</version>
		</dependency>
		<dependency>
			<groupId>com.upokecenter</groupId>
			<artifactId>cbor</artifactId>
			<version>5.0.0-alpha2</version>
		</dependency>
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf</artifactId>
			<version>3.7</version>
		</dependency>
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf-intellij-themes</artifactId>
			<version>3.7</version>
		</dependency>

		<dependency>
			<groupId>it.unimi.dsi</groupId>
			<artifactId>fastutil</artifactId>
			<version>8.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.java-websocket</groupId>
			<artifactId>Java-WebSocket</artifactId>
			<version>1.5.6</version>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>25</source>
					<target>25</target>
					<release>25</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<mainClass>byransha.web.WebServer</mainClass>
					<commandlineArgs>-Dfile.encoding=UTF-8
						appClass=byransha.nodes.lab.I3SApplication</commandlineArgs>
					<systemProperties>
						<systemProperty>
							<key>file.encoding</key>
							<value>UTF-8</value>
						</systemProperty>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>25</source>
					<target>25</target>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
